--- a/src/styles/components/widget.css
+++ b/src/styles/components/widget.css
@@ -11,7 +11,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: var(--space-6) var(--app-widget-inline-padding);
+  padding: var(--space-6) var(--app-widget-inline-padding) 0;
 }
 
 .widget-title {
@@ -26,5 +26,5 @@
 .widget-content {
   display: grid;
   gap: var(--space-6);
-  padding: 0 var(--app-widget-inline-padding) 24px;
+  padding: var(--space-6) var(--app-widget-inline-padding);
 }
